--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "next-themes": "^0.4.6",
     "prisma": "^7.2.0",
     "react": "19.2.3",
+    "react-contenteditable": "^3.3.7",
     "react-dom": "19.2.3",
     "tailwind-merge": "^3.4.0"
   },
