--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
   },
   "dependencies": {
     "@radix-ui/react-label": "^1.0.0",
+    "@radix-ui/react-slot": "^1.2.4",
     "jsonwebtoken": "^9.0.0",
     "@prisma/client": "^7.2.0",
-    "@radix-ui/react-slot": "^1.2.4",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.3",
     "class-variance-authority": "^0.7.1",
@@ -25,17 +25,17 @@
     "next-auth": "^4.24.13",
     "next-themes": "^0.4.6",
     "prisma": "^7.2.0",
-    "react": "19.2.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-contenteditable": "^3.3.7",
-    "react-dom": "19.2.3",
     "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "@types/bcrypt": "^6.0.0",
     "@types/node": "^20.19.27",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
     "autoprefixer": "^10.4.23",
     "eslint": "^9",
     "eslint-config-next": "16.1.1",
