--- a/package.json
+++ b/package.json
@@ -10,30 +10,33 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
+    "@prisma/adapter-pg": "^7.2.0",
+    "@prisma/client": "^7.2.0",
     "@radix-ui/react-label": "^1.0.0",
     "@radix-ui/react-slot": "^1.2.4",
-    "jsonwebtoken": "^9.0.0",
-    "@prisma/client": "^7.2.0",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^17.2.3",
     "framer-motion": "^12.23.26",
+    "jsonwebtoken": "^9.0.0",
     "lucide-react": "^0.562.0",
     "next": "16.1.1",
     "next-auth": "^4.24.13",
     "next-themes": "^0.4.6",
+    "pg": "^8.17.0",
     "prisma": "^7.2.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
     "react-contenteditable": "^3.3.7",
+    "react-dom": "^18.2.0",
     "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "@types/bcrypt": "^6.0.0",
     "@types/node": "^20.19.27",
+    "@types/pg": "^8.16.0",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.4.23",
